new tabindex handling, #50185; subsilver doesn't use tabindexes
git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10050 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/template/captcha_recaptcha.html
+++ b/phpBB/styles/prosilver/template/captcha_recaptcha.html
@@ -16,7 +16,8 @@
 		<script type="text/javascript" src="{RECAPTCHA_SERVER}/challenge?k={RECAPTCHA_PUBKEY}{RECAPTCHA_ERRORGET}">
 		// <![CDATA[
 		var RecaptchaOptions = {
-			lang : {L_RECAPTCHA_LANG}
+		   lang : {L_RECAPTCHA_LANG},
+		   tabindex : <!-- INC $TAB_INDEX -->
 		};
 		// ]]>
 		</script>
