Adjustement for r10050, related to Bug #50185 Use internal S_TAB_INDEX instead of DEFINE
git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10055 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/template/captcha_recaptcha.html
+++ b/phpBB/styles/prosilver/template/captcha_recaptcha.html
@@ -17,7 +17,7 @@
 		// <![CDATA[
 		var RecaptchaOptions = {
 		   lang : {L_RECAPTCHA_LANG},
-		   tabindex : <!-- INC $TAB_INDEX -->
+		   tabindex : <!-- INC S_TAB_INDEX -->
 		};
 		// ]]>
 		</script>
