--- a/phpBB/styles/prosilver/template/login_body.html
+++ b/phpBB/styles/prosilver/template/login_body.html
@@ -6,16 +6,16 @@
 
 	<div class="content">
 		<h2><!-- IF LOGIN_EXPLAIN -->{LOGIN_EXPLAIN}<!-- ELSE -->{L_LOGIN}<!-- ENDIF --></h2>
-		
+
 		<fieldset <!-- IF not S_CONFIRM_CODE -->class="fields1"<!-- ELSE -->class="fields2"<!-- ENDIF -->>
 		<!-- IF LOGIN_ERROR --><div class="error">{LOGIN_ERROR}</div><!-- ENDIF -->
 		<dl>
 			<dt><label for="{USERNAME_CREDENTIAL}">{L_USERNAME}:</label></dt>
-			<dd><input type="text" tabindex="<!-- INC $TAB_INDEX -->" name="{USERNAME_CREDENTIAL}" id="{USERNAME_CREDENTIAL}" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
+			<dd><input type="text" tabindex="<!-- INC S_TAB_INDEX -->" name="{USERNAME_CREDENTIAL}" id="{USERNAME_CREDENTIAL}" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
 		</dl>
 		<dl>
 			<dt><label for="{PASSWORD_CREDENTIAL}">{L_PASSWORD}:</label></dt>
-			<dd><input type="password" tabindex="<!-- INC $TAB_INDEX -->" id="{PASSWORD_CREDENTIAL}" name="{PASSWORD_CREDENTIAL}" size="25" class="inputbox autowidth" /></dd>
+			<dd><input type="password" tabindex="<!-- INC S_TAB_INDEX -->" id="{PASSWORD_CREDENTIAL}" name="{PASSWORD_CREDENTIAL}" size="25" class="inputbox autowidth" /></dd>
 			<!-- IF S_DISPLAY_FULL_LOGIN and (U_SEND_PASSWORD or U_RESEND_ACTIVATION) -->
 				<!-- IF U_SEND_PASSWORD --><dd><a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a></dd><!-- ENDIF -->
 				<!-- IF U_RESEND_ACTIVATION --><dd><a href="{U_RESEND_ACTIVATION}">{L_RESEND_ACTIVATION}</a></dd><!-- ENDIF -->
@@ -26,16 +26,16 @@
 		<!-- ENDIF -->
 		<!-- IF S_DISPLAY_FULL_LOGIN -->
 		<dl>
-			<!-- IF S_AUTOLOGIN_ENABLED --><dd><label for="autologin"><input type="checkbox" name="autologin" id="autologin" tabindex="<!-- INC $TAB_INDEX -->" /> {L_LOG_ME_IN}</label></dd><!-- ENDIF -->
-			<dd><label for="viewonline"><input type="checkbox" name="viewonline" id="viewonline" tabindex="<!-- INC $TAB_INDEX -->" /> {L_HIDE_ME}</label></dd>
+			<!-- IF S_AUTOLOGIN_ENABLED --><dd><label for="autologin"><input type="checkbox" name="autologin" id="autologin" tabindex="<!-- INC S_TAB_INDEX -->" /> {L_LOG_ME_IN}</label></dd><!-- ENDIF -->
+			<dd><label for="viewonline"><input type="checkbox" name="viewonline" id="viewonline" tabindex="<!-- INC S_TAB_INDEX -->" /> {L_HIDE_ME}</label></dd>
 		</dl>
 		<!-- ENDIF -->
 
 		<dl>
 			<dt>&nbsp;</dt>
-			<dd>{S_HIDDEN_FIELDS}<input type="submit" name="login" tabindex="<!-- INC $TAB_INDEX -->" value="{L_LOGIN}" class="button1" /></dd>
+			<dd>{S_HIDDEN_FIELDS}<input type="submit" name="login" tabindex="<!-- INC S_TAB_INDEX -->" value="{L_LOGIN}" class="button1" /></dd>
 		</dl>
-	
+
 		</fieldset>
 	</div>
 	<span class="corners-bottom"><span></span></span></div>
