--- a/phpBB/styles/prosilver/template/captcha_default.html
+++ b/phpBB/styles/prosilver/template/captcha_default.html
@@ -11,7 +11,7 @@
 	<dl>
 		<dt><label for="confirm_code">{L_CONFIRM_CODE}:</label></dt>
 		<dd><img src="{CONFIRM_IMAGE_LINK}" alt="{L_CONFIRM_CODE}" /></dd>
-		<dd><input type="text" name="confirm_code" id="confirm_code" size="8" maxlength="8" tabindex="<!-- INC $TAB_INDEX -->" class="inputbox narrow" title="{L_CONFIRM_CODE}" />
+		<dd><input type="text" name="confirm_code" id="confirm_code" size="8" maxlength="8" tabindex="<!-- INC S_TAB_INDEX -->" class="inputbox narrow" title="{L_CONFIRM_CODE}" />
 		<!-- IF S_CONFIRM_REFRESH --><input type="submit" name="refresh_vc" id="refresh_vc" class="button2" value="{L_VC_REFRESH}" /><!-- ENDIF -->
 		<input type="hidden" name="confirm_id" id="confirm_id" value="{CONFIRM_ID}" /></dd>
 		<dd>{L_CONFIRM_CODE_EXPLAIN}</dd>
