--- a/phpBB/styles/prosilver/template/captcha_qa.html
+++ b/phpBB/styles/prosilver/template/captcha_qa.html
@@ -9,7 +9,7 @@
 	<dl>
 	<dt><label>{QA_CONFIRM_QUESTION}</label>:<br /><span>{L_CONFIRM_QUESTION_EXPLAIN}</span></dt>
 	<dd>
-		<input type="text" tabindex="<!-- INC $TAB_INDEX -->" name="qa_answer" id="answer" size="45"  class="inputbox autowidth" title="{L_ANSWER}" />
+		<input type="text" tabindex="<!-- INC S_TAB_INDEX -->" name="qa_answer" id="answer" size="45"  class="inputbox autowidth" title="{L_ANSWER}" />
 		<input type="hidden" name="qa_confirm_id" id="qa_confirm_id" value="{QA_CONFIRM_ID}" />
 	</dd>
 	</dl>
