--- a/phpBB/styles/prosilver/template/posting_editor.html
+++ b/phpBB/styles/prosilver/template/posting_editor.html
@@ -90,14 +90,14 @@
 	<!-- IF not S_PRIVMSGS and S_DISPLAY_USERNAME -->
 	<dl style="clear: left;">
 		<dt><label for="username">{L_USERNAME}:</label></dt>
-		<dd><input type="text" tabindex="<!-- INC $TAB_INDEX -->"  name="username" id="username" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
+		<dd><input type="text" tabindex="<!-- INC S_TAB_INDEX -->"  name="username" id="username" size="25" value="{USERNAME}" class="inputbox autowidth" /></dd>
 	</dl>
 	<!-- ENDIF -->
 
 	<!-- IF S_POST_ACTION or S_PRIVMSGS or S_EDIT_DRAFT -->
 	<dl style="clear: left;">
 		<dt><label for="subject">{L_SUBJECT}:</label></dt>
-		<dd><input type="text" name="subject" id="subject" size="45" maxlength="<!-- IF S_NEW_MESSAGE -->60<!-- ELSE -->64<!-- ENDIF -->" tabindex="<!-- INC $TAB_INDEX -->" value="{SUBJECT}{DRAFT_SUBJECT}" class="inputbox autowidth" /></dd>
+		<dd><input type="text" name="subject" id="subject" size="45" maxlength="<!-- IF S_NEW_MESSAGE -->60<!-- ELSE -->64<!-- ENDIF -->" tabindex="<!-- INC S_TAB_INDEX -->" value="{SUBJECT}{DRAFT_SUBJECT}" class="inputbox autowidth" /></dd>
 	</dl>
 		<!-- IF CAPTCHA_TEMPLATE and S_CONFIRM_CODE -->
 		<!-- INCLUDE {CAPTCHA_TEMPLATE} -->
@@ -135,7 +135,7 @@
 	</div>
 
 	<div id="message-box">
-		<textarea <!-- IF S_UCP_ACTION and not S_PRIVMSGS and not S_EDIT_DRAFT -->name="signature" id="signature" style="height: 9em;"<!-- ELSE -->name="message" id="message"<!-- ENDIF --> rows="15" cols="76" tabindex="<!-- INC $TAB_INDEX -->" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" class="inputbox">{MESSAGE}{DRAFT_MESSAGE}{SIGNATURE}</textarea>
+		<textarea <!-- IF S_UCP_ACTION and not S_PRIVMSGS and not S_EDIT_DRAFT -->name="signature" id="signature" style="height: 9em;"<!-- ELSE -->name="message" id="message"<!-- ENDIF --> rows="15" cols="76" tabindex="<!-- INC S_TAB_INDEX -->" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" onfocus="initInsertions();" class="inputbox">{MESSAGE}{DRAFT_MESSAGE}{SIGNATURE}</textarea>
 	</div>
 </fieldset>
 
@@ -180,10 +180,10 @@
 		<fieldset class="submit-buttons">
 			{S_HIDDEN_ADDRESS_FIELD}
 			{S_HIDDEN_FIELDS}
-			<!-- IF S_HAS_DRAFTS --><input type="submit" accesskey="d" tabindex="<!-- INC $TAB_INDEX -->" name="load" value="{L_LOAD}" class="button2" onclick="load_draft = true;" />&nbsp; <!-- ENDIF -->
-			<!-- IF S_SAVE_ALLOWED --><input type="submit" accesskey="k" tabindex="<!-- INC $TAB_INDEX -->" name="save" value="{L_SAVE}" class="button2" />&nbsp; <!-- ENDIF -->
-			<input type="submit" tabindex="<!-- INC $TAB_INDEX -->" name="preview" value="{L_PREVIEW}" class="button1"<!-- IF not S_PRIVMSGS --> onclick="document.getElementById('postform').action += '#preview';"<!-- ENDIF --> />&nbsp;
-			<input type="submit" accesskey="s" tabindex="<!-- INC $TAB_INDEX -->" name="post" value="{L_SUBMIT}" class="button1" />&nbsp;
+			<!-- IF S_HAS_DRAFTS --><input type="submit" accesskey="d" tabindex="<!-- INC S_TAB_INDEX -->" name="load" value="{L_LOAD}" class="button2" onclick="load_draft = true;" />&nbsp; <!-- ENDIF -->
+			<!-- IF S_SAVE_ALLOWED --><input type="submit" accesskey="k" tabindex="<!-- INC S_TAB_INDEX -->" name="save" value="{L_SAVE}" class="button2" />&nbsp; <!-- ENDIF -->
+			<input type="submit" tabindex="<!-- INC S_TAB_INDEX -->" name="preview" value="{L_PREVIEW}" class="button1"<!-- IF not S_PRIVMSGS --> onclick="document.getElementById('postform').action += '#preview';"<!-- ENDIF --> />&nbsp;
+			<input type="submit" accesskey="s" tabindex="<!-- INC S_TAB_INDEX -->" name="post" value="{L_SUBMIT}" class="button1" />&nbsp;
 
 		</fieldset>
 
