Change of r10055, which itself was: Adjustement for r10050, related to Bug #50185
Instead of S_TAB_INDEX we now use a method suggested by nickvergessen - we simply DEFINE the tabindex for the captcha depending on where it is included.

git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10058 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/template/captcha_recaptcha.html
+++ b/phpBB/styles/prosilver/template/captcha_recaptcha.html
@@ -16,8 +16,8 @@
 		<script type="text/javascript" src="{RECAPTCHA_SERVER}/challenge?k={RECAPTCHA_PUBKEY}{RECAPTCHA_ERRORGET}">
 		// <![CDATA[
 		var RecaptchaOptions = {
-		   lang : {L_RECAPTCHA_LANG},
-		   tabindex : <!-- INC S_TAB_INDEX -->
+			lang : {L_RECAPTCHA_LANG},
+			tabindex : <!-- IF $CAPTCHA_TAB_INDEX -->{$CAPTCHA_TAB_INDEX}<!-- ELSE -->10<!-- ENDIF -->
 		};
 		// ]]>
 		</script>
