--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -121,6 +121,17 @@ a:active {
 	font-weight: bold;
 }
 
+/* List items */
+ul, ol {
+	list-style-position: inside;
+	margin-left: 1em;
+}
+
+li {
+	display: list-item;
+	list-style-type: inherit;
+}
+
 /* Main blocks
 ---------------------------------------- */
 #wrap {
