--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -132,6 +132,18 @@ dd.posts, dd.topics, dd.views {
 	font-size: 1.2em;
 }
 
+/* List in forum description */
+dl.icon dt ol,
+dl.icon dt ul {
+	list-style-position: inside;
+	margin-left: 1em;
+}
+
+dl.icon dt li {
+	display: list-item;
+	list-style-type: inherit;
+}
+
 dd.lastpost {
 	width: 25%;
 	font-size: 1.1em;
