add inputbox class to input in prosilver - Bug #50795
git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10110 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/template/mcp_logs.html
+++ b/phpBB/styles/prosilver/template/mcp_logs.html
@@ -9,7 +9,7 @@
 
 	<ul class="linklist">
 		<li class="leftside">
-			{L_SEARCH_KEYWORDS}: <input type="text" name="keywords" value="{S_KEYWORDS}" />&nbsp;<input type="submit" class="button2" name="filter" value="{L_SEARCH}" />
+			{L_SEARCH_KEYWORDS}: <input type="text" class="inputbox" name="keywords" value="{S_KEYWORDS}" />&nbsp;<input type="submit" class="button2" name="filter" value="{L_SEARCH}" />
 		</li>
 		<li class="rightside pagination">
 			<!-- IF TOTAL -->{TOTAL} <!-- ENDIF -->
@@ -74,7 +74,7 @@
 			<fieldset class="display-actions">
 				<input class="button2" type="submit" name="action[del_all]" value="{L_DELETE_ALL}" />
 				&nbsp;<input class="button1" type="submit" value="{L_DELETE_MARKED}" name="action[del_marked]" />
-	
+
 				<div><a href="#" onclick="marklist('mcp', 'mark', true); return false;">{L_MARK_ALL}</a> :: <a href="#" onclick="marklist('mcp', 'mark', false); return false;">{L_UNMARK_ALL}</a></div>
 			</fieldset>
 		<!-- ENDIF -->
