Correctly display underlined links placed in last line in viewtopic. (Bug #14811 - Patch by primehalo)
git-svn-id: file:///svn/phpbb/branches/phpBB-3_0_0@10132 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -307,6 +307,7 @@ div[class].topic-actions {
 	font-family: "Lucida Grande", "Trebuchet MS", Verdana, Helvetica, Arial, sans-serif;
 	font-size: 1em;
 	color: #333333;
+	padding-bottom: 1px;
 }
 
 .content h2, .panel h2 {
