--- a/phpBB/styles/prosilver/template/login_body.html
+++ b/phpBB/styles/prosilver/template/login_body.html
@@ -1,5 +1,11 @@
 <!-- INCLUDE overall_header.html -->
 
+<script type="text/javascript">
+// <![CDATA[
+	onload_functions.push('document.getElementById("{USERNAME_CREDENTIAL}").focus();');
+// ]]>
+</script>
+
 <form action="{S_LOGIN_ACTION}" method="post" id="login">
 <div class="panel">
 	<div class="inner"><span class="corners-top"><span></span></span>
