[ticket/9587] Replace '0px' with '0'.
This has been introduced by merge of c7a25c58b893fc72ffb3746374ece9de1d388531, which was not supposed to be merged. 1b2a65333b5be1f6086bbd1d438e061041bd2b75 was supposed to be merged instead.

PHPBB3-9587

--- a/phpBB/styles/prosilver/theme/forms.css
+++ b/phpBB/styles/prosilver/theme/forms.css
@@ -98,7 +98,7 @@ fieldset.fields1 div {
 
 /* Set it back to 0px for the reCaptcha divs: PHPBB3-9587 */
 fieldset.fields1 #recaptcha_widget_div div {
-	margin-bottom: 0px;
+	margin-bottom: 0;
 }
 
 /* Specific layout 2 */
