[ticket/7332] Collapse post details content down to a maximum of 300px heigh
The MCP post details can be difficult to use if the post is particularly long
this change shrinks the post area to a maximum of 300 pixels, like the topic
review, making it easier to access the functions beneath the post content.

PHPBB3-7332

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -298,6 +298,15 @@ div[class].topic-actions {
 	display: none;
 }
 
+/* MCP Post details
+----------------------------------------*/
+#post_details
+{
+	/* This will only work in IE7+, plus the others */
+	overflow: auto;
+	max-height: 300px;
+}
+
 /* Content container styles
 ----------------------------------------*/
 .content {
