[ticket/7332] Fix post details expand link rendering on Webkit.
PHPBB3-7332

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -307,6 +307,11 @@ div[class].topic-actions {
 	max-height: 300px;
 }
 
+#expand
+{
+	clear: both;
+}
+
 /* Content container styles
 ----------------------------------------*/
 .content {
