--- a/phpBB/styles/prosilver/template/mcp_topic.html
+++ b/phpBB/styles/prosilver/template/mcp_topic.html
@@ -31,7 +31,7 @@ onload_functions.push('subPanels()');
 		</li>
 		<li id="merge-panel-tab"<!-- IF S_MERGE_VIEW --> class="activetab"<!-- ENDIF -->>
 			<span class="corners-top"><span></span></span>
-			<a href="#minitabs" onclick="subPanels('merge-panel'); return false;"><span>{L_MERGE_TOPIC}</span></a>
+			<a href="#minitabs" onclick="subPanels('merge-panel'); return false;"><span>{L_MERGE_POSTS}</span></a>
 		</li>
 	</ul>
 </div>
@@ -77,7 +77,7 @@ onload_functions.push('subPanels()');
 
 <!-- IF S_CAN_MERGE -->
 	<fieldset id="merge-panel" class="fields2">
-		<p>{L_MERGE_TOPIC_EXPLAIN}</p>
+		<p>{L_MERGE_POSTS_EXPLAIN}</p>
 	<dl>
 		<dt><label for="to_topic_id">{L_MERGE_TOPIC_ID}:</label></dt>
 		<dd>
