--- a/phpBB/styles/subsilver2/template/mcp_topic.html
+++ b/phpBB/styles/subsilver2/template/mcp_topic.html
@@ -35,10 +35,10 @@
 
 <!-- IF S_CAN_MERGE -->
 	<tr>
-		<th colspan="3" nowrap="nowrap">{L_MERGE_TOPIC}</th>
+		<th colspan="3" nowrap="nowrap">{L_MERGE_POSTS}</th>
 	</tr>
 	<tr>
-		<td class="row2" colspan="3" align="center"><span class="gensmall">{L_MERGE_TOPIC_EXPLAIN}</span></td>
+		<td class="row2" colspan="3" align="center"><span class="gensmall">{L_MERGE_POSTS_EXPLAIN}</span></td>
 	</tr>
 	<tr>
 		<td class="row1" nowrap="nowrap"><span class="gen">{L_MERGE_TOPIC_ID}</span></td>
