--- a/phpBB/styles/prosilver/template/viewtopic_print.html
+++ b/phpBB/styles/prosilver/template/viewtopic_print.html
@@ -55,7 +55,7 @@
 //-->
 	<div id="page-footer">
 		<div class="page-number">{S_TIMEZONE}<br />{PAGE_NUMBER}</div>
-		<div class="copyright">Powered by phpBB &copy; 2000, 2002, 2005, 2007 phpBB Group<br />http://www.phpbb.com/</div>
+		<div class="copyright">Powered by phpBB &copy; phpBB Group<br />http://www.phpbb.com/</div>
 	</div>
 </div>
 
