[ticket/10068] Style links posted in posts the same way as in signatures.
Firefox4 is going to have some restrictions to :visited for security purpose
(see http://hacks.mozilla.org/2010/03/privacy-related-changes-coming-to-css-vistited/ for more information)
In phpBB links inside posts therefor can not be displayed with the dotted line
anymore. So when we change this anyway we can just make links in signature and
posts look the same.

PHPBB3-10068

--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -298,7 +298,7 @@ a.topictitle:active {
 
 .postlink:visited {
 	color: #5D8FBD;
-	border-bottom-color: #666666;
+	border-bottom-color: #5D8FBD;
 }
 
 .postlink:active {
