[ticket/8802] Rename "Mark forums read" to "Mark subforums read" for subforums.
Clicking "Mark forums read" when not browsing on the index page only marks
all subforums (and sub-sub forums etc.) read, topics in the current forum have
to marked seperately by clicking the "Mark topics read" link.

Let's indicate this circumstance by using the word "subforums".

PHPBB3-8802

--- a/phpBB/styles/prosilver/template/viewforum_body.html
+++ b/phpBB/styles/prosilver/template/viewforum_body.html
@@ -28,7 +28,7 @@
 <!-- IF S_HAS_SUBFORUM -->
 <!-- IF not S_IS_BOT and U_MARK_FORUMS -->
 <ul class="linklist">
-	<li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_FORUMS_READ}</a></li>
+	<li class="rightside"><a href="{U_MARK_FORUMS}">{L_MARK_SUBFORUMS_READ}</a></li>
 </ul>
 <!-- ENDIF -->
 	<!-- INCLUDE forumlist_body.html -->
