--- a/phpBB/styles/prosilver/template/ucp_avatar_options.html
+++ b/phpBB/styles/prosilver/template/ucp_avatar_options.html
@@ -7,31 +7,12 @@
 
 	<fieldset>
 	<!-- IF ERROR --><p class="error">{ERROR}</p><!-- ENDIF -->
-	<dl>
-		<dt><label>{L_CURRENT_IMAGE}:</label><br /><span>{L_AVATAR_EXPLAIN}</span></dt>
-		<dd><!-- IF AVATAR -->{AVATAR}<!-- ELSE --><img src="{T_THEME_PATH}/images/no_avatar.gif" alt="" /><!-- ENDIF --></dd>
-		<dd><label for="delete"><input type="checkbox" name="delete" id="delete" /> {L_DELETE_AVATAR}</label></dd>
-	</dl>
-
-	<!-- IF S_UPLOAD_AVATAR_FILE -->
 		<dl>
-			<dt><label for="uploadfile">{L_UPLOAD_AVATAR_FILE}:</label></dt>
-			<dd><input type="hidden" name="MAX_FILE_SIZE" value="{AVATAR_SIZE}" /><input type="file" name="uploadfile" id="uploadfile" class="inputbox autowidth" /></dd>
+			<dt><label>{L_CURRENT_IMAGE}:</label><br /><span>{L_AVATAR_EXPLAIN}</span></dt>
+			<dd><!-- IF AVATAR -->{AVATAR}<!-- ELSE --><img src="{T_THEME_PATH}/images/no_avatar.gif" alt="" /><!-- ENDIF --></dd>
+			<!-- IF AVATAR && S_AVATARS_ENABLED --><dd><input type="submit" name="submit" id="delete" value="{LA_DELETE_AVATAR}" /></dd><!-- ENDIF -->
 		</dl>
-	<!-- ENDIF -->
-
-	<!-- IF S_UPLOAD_AVATAR_URL -->
-		<dl>
-			<dt><label for="uploadurl">{L_UPLOAD_AVATAR_URL}:</label><br /><span>{L_UPLOAD_AVATAR_URL_EXPLAIN}</span></dt>
-			<dd><input type="text" name="uploadurl" id="uploadurl" value="{AVATAR_URL}" class="inputbox" /></dd>
-		</dl>
-	<!-- ENDIF -->
-
-	<!-- IF S_LINK_AVATAR -->
-		<dl>
-			<dt><label for="remotelink">{L_LINK_REMOTE_AVATAR}:</label><br /><span>{L_LINK_REMOTE_AVATAR_EXPLAIN}</span></dt>
-			<dd><input type="text" name="remotelink" id="remotelink" value="{AVATAR_REMOTE}" class="inputbox" /></dd>
-		</dl>
+		<!-- IF S_AVATARS_ENABLED -->
 		<dl>
 			<dt><label for="width">{L_LINK_REMOTE_SIZE}:</label><br /><span>{L_LINK_REMOTE_SIZE_EXPLAIN}</span></dt>
 			<dd>
@@ -39,32 +20,26 @@
 				<label for="height"><input type="text" name="height" id="height" size="3" value="{AVATAR_HEIGHT}" class="inputbox autowidth" /> {L_PIXEL}</label>
 			</dd>
 		</dl>
-	<!-- ENDIF -->
+		<!-- ENDIF -->
 	</fieldset>
 
-	<!-- IF S_IN_AVATAR_GALLERY -->
-		<span class="corners-bottom"><span></span></span></div>
-	</div>
+<!-- BEGIN avatar_drivers -->
+	<h3>{avatar_drivers.L_TITLE}</h3>
+	<p>{avatar_drivers.L_EXPLAIN}</p>
 
-	<div class="panel">
-		<div class="inner"><span class="corners-top"><span></span></span>
+	<fieldset>
+	{avatar_drivers.OUTPUT}
+	</fieldset>
+	<fieldset class="submit-buttons">
+		<input type="reset" value="{L_RESET}" name="reset" class="button2" /> &nbsp;
+		<input type="submit" name="submit_av_{avatar_drivers.DRIVER}" value="{L_SUBMIT}" class="button1" />
+	</fieldset>
+<!-- END avatar_drivers -->
 
-		<h3>{L_AVATAR_GALLERY}</h3>
-
-		<fieldset>
-			<label for="category">{L_AVATAR_CATEGORY}: <select name="category" id="category">{S_CAT_OPTIONS}</select></label>
-			<input type="submit" value="{L_GO}" name="display_gallery" class="button2" />
-			<input type="submit" name="cancel" value="{L_CANCEL}" class="button2" />
-		</fieldset>
-
-		<div id="gallery">
-		<!-- BEGIN avatar_row --><!-- BEGIN avatar_column -->
-			<label for="av-{avatar_row.S_ROW_COUNT}-{avatar_row.avatar_column.S_ROW_COUNT}"><img src="{avatar_row.avatar_column.AVATAR_IMAGE}" alt="" /><br />
-				<input type="radio" name="avatar_select" id="av-{avatar_row.S_ROW_COUNT}-{avatar_row.avatar_column.S_ROW_COUNT}" value="{avatar_row.avatar_column.AVATAR_FILE}" /></label>
-		<!-- END avatar_column --><!-- END avatar_row -->
-		</div>
-
+	<fieldset>
+	<!-- IF S_LINK_AVATAR -->
 	<!-- ENDIF -->
+	</fieldset>
 
 	<span class="corners-bottom"><span></span></span></div>
 </div>
