--- a/phpBB/styles/prosilver/template/ucp_avatar_options_upload.html
+++ b/phpBB/styles/prosilver/template/ucp_avatar_options_upload.html
@@ -1,11 +1,11 @@
 <dl>
-	<dt><label for="uploadfile">{L_UPLOAD_AVATAR_FILE}:</label></dt>
-	<dd><input type="hidden" name="MAX_FILE_SIZE" value="{AVATAR_SIZE}" /><input type="file" name="uploadfile" id="uploadfile" class="inputbox autowidth" /></dd>
+	<dt><label for="av_upload_file">{L_UPLOAD_AVATAR_FILE}:</label></dt>
+	<dd><input type="hidden" name="MAX_FILE_SIZE" value="{AV_UPLOAD_SIZE}" /><input type="file" name="av_upload_file" id="av_upload_file" class="inputbox autowidth" /></dd>
 </dl>
 
 <!-- IF S_UPLOAD_AVATAR_URL -->
 	<dl>
-		<dt><label for="uploadurl">{L_UPLOAD_AVATAR_URL}:</label><br /><span>{L_UPLOAD_AVATAR_URL_EXPLAIN}</span></dt>
-		<dd><input type="text" name="uploadurl" id="uploadurl" value="{AVATAR_URL}" class="inputbox" /></dd>
+		<dt><label for="av_upload_url">{L_UPLOAD_AVATAR_URL}:</label><br /><span>{L_UPLOAD_AVATAR_URL_EXPLAIN}</span></dt>
+		<dd><input type="text" name="av_upload_url" id="av_upload_url" value="" class="inputbox" /></dd>
 	</dl>
 <!-- ENDIF -->
